[tool.poetry]
name = "currency-converter-api"
version = "0.1.0"
description = ""
authors = ["Breno Jesus Fernandes <breno.de.jesus.fernandes@gmail.com>"]
license = "MIT"
readme = "README.md"
packages = [{include = "currency_converter_api"}]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.95.1"
uvicorn = "^0.22.0"
httpx = "^0.24.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
